@@ -346,6 +346,7 @@ III) MAJOR CHANGES FROM PREVIOUS RELEASES
        Canon PIXMA iP4100 (EXPERIMENTAL)
        Canon PIXMA iP5000 (EXPERIMENTAL)
        Canon PIXMA MP600
+       Canon PIXMA MP970
 
        *1: for compatibility, the original printers are named with
         "old" appended. These old printers will be deprecated in a
